Fix: breadcrumbs wrap. Title lineheight in Article block. Try fix production errors

--- a/src/widgets/ui/blocks/article/ArticleBlock/ArticleBlock.module.scss
+++ b/src/widgets/ui/blocks/article/ArticleBlock/ArticleBlock.module.scss
@@ -4,7 +4,7 @@
 
 .title {
 	@include gilroy(500, 50);
-	line-height: 1.2;
+	line-height: 1.5;
 	text-transform: uppercase;
 	color: $text-800;
 
